SSCS-10620 Using mutable arrays for tests